--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,9 +22,13 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: ./CircleOfInfluenceTool
     - name: Build
       run: dotnet build --no-restore
+      working-directory: ./CircleOfInfluenceTool
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: ./CircleOfInfluenceTool
     - name: Publish
       run: dotnet publish -c release -o ./docs
+      working-directory: ./CircleOfInfluenceTool
