Test test is this thing on?

--- a/.github/workflows/Build&Deploy.yml
+++ b/.github/workflows/Build&Deploy.yml
@@ -34,7 +34,12 @@ jobs:
     - name: Publish
       run: dotnet publish CircleOfInfluenceTool.csproj -c release -o release
       working-directory: ./CircleOfInfluenceTool
-
+    # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
+    - name: Change base-tag in index.html from / to CircleOfInfluenceTool
+      run: sed -i 's/<base href="\/" \/>/<base href="\/CircleOfInfluenceTool\/" \/>/g' release/wwwroot/index.html
+    # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.6.0
       with:
