--- a/.github/workflows/Build&Deploy.yml
+++ b/.github/workflows/Build&Deploy.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet test CircleOfInfluenceTool.csproj --no-build --verbosity normal
     - name: Publish
       run: dotnet publish CircleOfInfluenceTool.csproj -c release -o release
-    # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
+    # changes the base-tag in index.html from '/' to 'CircleOfInfluenceTool' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to CircleOfInfluenceTool
       run: sed -i 's/<base href="\/" \/>/<base href="\/CircleOfInfluenceTool\/" \/>/g' release/wwwroot/index.html
       # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
